super actualizacion - los cambios explicados se encuentran en el archivo logs.txt xd

--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html 
-<head>       
-    <title>Registrate en Mindle </title>
+<html>
+<head>      
+    <title>Bienvenido a Mindle</title>
 </head>
 <body>
-    <h1>Registrarse</h1>
+    <h1>Iniciar sesion</h1>
     <form>
         <label for="UserID">Nombre de usuario: </label>
         <input id="UserID" name ="Nommbre de Usuario"/>
@@ -12,11 +12,12 @@
         <label for="Password">Contraseña: </label>
         <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
         <br>
-        <label for="ColorFav">Color favorito: </label>
-        <input type="color" id="ColorFav" name ="ColorFav" 
+        <a target="_blank" href="">¿Tienes problemas para iniciar sesión? </a> 
         <br>
-        <p>¿Ya tienes una cuenta?</p>
-        <a target="_blank" href="">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion-->
+        <p>¿No tienes una cuenta?</p>
+        <a target="_blank" href="/register">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!-->
+        <br>
+        
     </form>
 </body>
 </html>
