--- a/templates/pagdicc.html
+++ b/templates/pagdicc.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Diccionario</h1>
     <h2> Barra de búsqueda <h2> <!--poner marco grrr-->
-    <img src="https://img.freepik.com/vector-premium/capsula-lupa-icono-contorno-capsula-lupa-vector-icono-color-plano-aislado_96318-76629.jpg?w=740" height="40"/>
+    <img src="imagenes/lupa.png"> <!-- me pitié la imagen xd-->
     <h2> Nombres de los diagnósticos </h2> <!--tmb en con marco-->
     <ul>
         <li> 1............</li>
