--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html 
+<html>
 <head>       
-    <title>Bienvenido a Mindle</title>
+    <title>Registrate en Mindle </title>
 </head>
 <body>
-    <h1>Iniciar sesion</h1>
+    <h1>Registrarse</h1>
     <form>
         <label for="UserID">Nombre de usuario: </label>
         <input id="UserID" name ="Nommbre de Usuario"/>
@@ -12,12 +12,11 @@
         <label for="Password">Contraseña: </label>
         <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
         <br>
-        <a target="_blank" href="">¿Tienes problemas para iniciar sesión? </a> 
+        <label for="ColorFav">Color favorito: </label>
+        <input type="color" id="ColorFav" name ="ColorFav" >
         <br>
-        <p>¿No tienes una cuenta?</p>
-        <a target="_blank" href="">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion-->
-        <br>
-        
+        <p>¿Ya tienes una cuenta?</p>
+        <a target="_blank" href="/login">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!x2-->
     </form>
 </body>
 </html>
