--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
     <title>Mindle</title>
 </head>
 <body>
-    <button type="button">Iniciar sesión</button>
-    <h1>Mindle</h1>
     <form>
+        <button type="submit" formaction="/login">Iniciar sesión</button>
+        <h1>Mindle</h1>
+
         <button type="button">Jugar</button>
         <br>
         <br>
-        <button type="button">Diccionario</button>
+        <button type=submit" formaction="/diccionario">Diccionario</button>
         <h1>Ranking</h1>
     <ol>
         <li value="1"> Jugador 1</li>
