--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
     <title>Mindle</title>
+    <link rel="stylesheet" href="CSS/style.css" />
 </head>
 <body>
     <form>
         <button type="submit" formaction="/login">Iniciar sesión</button>
         <h1>Mindle</h1>
-
-        <button type="button">Jugar</button>
+    <div class="EntornoBoton">
+            <button class="Boton" type="submit" formaction="/game">Jugar</button>
+    </div>
         <br>
         <br>
-        <button type=submit" formaction="/diccionario">Diccionario</button>
+        <button type="submit" formaction="/diccionario">Diccionario</button>
         <h1>Ranking</h1>
     <ol>
         <li value="1"> Jugador 1</li>
