--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>Mindle</title>
-    <link rel="stylesheet" href="CSS/style.css" />
+    {% load static %}
+    <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
     <form>
