--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -2,20 +2,23 @@
 <html>
 <head>      
     <title>Bienvenido a Mindle</title>
+    <link rel="stylesheet" href="static/css/styleInicioDeSesion.css" />
 </head>
 <body>
-    <h1>Iniciar sesion</h1>
-    <form>
+    <h1 class="titulo">Iniciar sesion</h1>
+    <form class="texto1">
+        <br>
+        
         <label for="UserID">Nombre de usuario: </label>
         <input id="UserID" name ="Nommbre de Usuario"/>
         <br>    
+        <br>
         <label for="Password">Contraseña: </label>
         <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
         <br>
-        <a target="_blank" href="">¿Tienes problemas para iniciar sesión? </a> 
         <br>
         <p>¿No tienes una cuenta?</p>
-        <a target="_blank" href="/register">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!-->
+        <a class="boton-registrarse" target="_blank" href="/register">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!-->
         <br>
         
     </form>
