--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -2,6 +2,7 @@
 <html>
 <head>       
     <title>Registrate en Mindle </title>
+    <link rel="stylesheet" href="static/css/styleInicioDeSesion.css" />
 </head>
 <body>
     <h1>Registrarse</h1>
@@ -12,8 +13,6 @@
         <label for="Password">Contraseña: </label>
         <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
         <br>
-        <label for="ColorFav">Color favorito: </label>
-        <input type="color" id="ColorFav" name ="ColorFav" >
         <br>
         <p>¿Ya tienes una cuenta?</p>
         <a target="_blank" href="/login">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!x2-->
