--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Mindle</title>
-    
+    {% load static %}
     <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
