--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -2,7 +2,7 @@
 <html>
 <head>      
     <title>Bienvenido a Mindle</title>
-    <link rel="stylesheet" href="static/css/styleInicioDeSesion.css" />
+    <link rel="stylesheet" href="..\static\css\styleInicioDeSesion.css" />
 </head>
 <body>
     <h1 class="titulo">Iniciar sesion</h1>
