--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -18,7 +18,7 @@
         <br>
         <br>
         <p>¿No tienes una cuenta?</p>
-        <a class="boton-registrarse" target="_self" href="/register">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!-->
+        <a class="boton-registrarse" target="_blank" href="/register">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!-->
         <br>
         
     </form>
