--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -15,7 +15,7 @@
         <br>
         <br>
         <p>¿Ya tienes una cuenta?</p>
-        <a target="_self" href="/login">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!x2-->
+        <a target="_blank" href="/login">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!x2-->
     </form>
 </body>
 </html>
