--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -1,26 +1,18 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
-<head>      
+<head>
     <title>Bienvenido a Mindle</title>
-    <link rel="stylesheet" href="..\static\css\styleInicioDeSesion.css" />
+    <link rel="stylesheet" href="{% static 'css/styleInicioDeSesion.css' %}">
 </head>
 <body>
-    <h1 class="titulo">Iniciar sesion</h1>
-    <form class="texto1">
-        <br>
-        
-        <label for="UserID">Nombre de usuario: </label>
-        <input id="UserID" name ="Nommbre de Usuario"/>
-        <br>    
-        <br>
-        <label for="Password">Contraseña: </label>
-        <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
-        <br>
-        <br>
-        <p>¿No tienes una cuenta?</p>
-        <a class="boton-registrarse" target="_blank" href="/register">Registrarse </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!-->
-        <br>
-        
+    <h1>Iniciar sesión</h1>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Iniciar sesión</button>
     </form>
+    <p>¿No tienes una cuenta?</p>
+    <a href="/register">Registrarse</a>
 </body>
 </html>
