--- a/templates/game.html
+++ b/templates/game.html
@@ -9,8 +9,8 @@
 
 <body>
     <header>
-        <h1>¡Adivina el Trastorno Mental!</h1>
-        <p>Ingresa un trastorno mental .</p>
+        <h1>¡Adivina el Diagnóstico del día</h1>
+        <p>Ingresa un diagnóstico.</p>
     </header>
     <main>
         <div class="game-container">
