Actualizacion palabra aleatoria

--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -2,7 +2,7 @@
 <html>
 <head>       
     <title>Registrate en Mindle </title>
-    <link rel="stylesheet" href="static/css/styleInicioDeSesion.css" />
+    <link rel="stylesheet" href="..\static\css\styleInicioDeSesion.css" />
 </head>
 <body>
     <h1>Registrarse</h1>
