--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>       
-    <title>Registrate en Mindle </title>
+    <title>Registrate en Mindle</title>
     <link rel="stylesheet" href="..\static\css\styleInicioDeSesion.css" />
 </head>
 <body>
-    <h1>Registrarse</h1>
-    <form>
-        <label for="UserID">Nombre de usuario: </label>
-        <input id="UserID" name ="Nommbre de Usuario"/>
-        <br>    
-        <label for="Password">Contraseña: </label>
-        <input type="Password" id="Password" name ="Password" placeholder="Al menos 8 caracteres..."/>
-        <br>
-        <br>
-        <p>¿Ya tienes una cuenta?</p>
-        <a target="_self" href="/login">Iniciar sesion </a> <!-- en comillas de href añadir la pagina de iniciar sesion//// Listo!!!x2-->
-    </form>
+    <div class="volver">        
+        <button class="button" onclick="history.back();">VOLVER</button>
+    </div> 
+    <div class="rounded-box">
+        <h1>Registrarse</h1>
+        <form>
+            <label for="UserID">Nombre de usuario: </label>
+            <input id="UserID" name="Nombre de Usuario"/>
+            <br><br>
+            <label for="Password">Contraseña: </label>
+            <input type="Password" id="Password" name="Password" placeholder="Al menos 8 caracteres..."/>
+            <br><br>
+            <p>¿Ya tienes una cuenta?</p>
+            <a class="button" target="_self" href="/login">Iniciar sesión</a>
+        </form>
+    </div>
 </body>
 </html>
