css con animacion a todas las paginas menos diccionario

--- a/templates/inicioDeSesion.html
+++ b/templates/inicioDeSesion.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="../static/css/styleInicioDeSesion.css" />
 </head>
 <body>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
         <div class="volver">        
             <button class="button" onclick="history.back();">VOLVER</button>
         </div> 
