--- a/static/css/styleInicioDeSesion.css
+++ b/static/css/styleInicioDeSesion.css
@@ -3,14 +3,78 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
+    font-family: Arial, sans-serif;
+    margin: auto;
+    overflow: auto;
+    background: linear-gradient(315deg, rgb(103, 144, 162) 3%, rgb(71, 108, 146) 38%, rgb(28, 69, 102) 68%, rgb(7, 24, 59) 98%);
+    animation: gradient 15s ease infinite;
+    background-size: 400% 400%;
+    background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh; /* Ocupa toda la pantalla */
 }
 
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.wave {
+    background: rgb(255 255 255 / 25%);
+    border-radius: 1000% 1000% 0 0;
+    position: fixed;
+    width: 200%;
+    height: 12em;
+    animation: wave 10s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
+    opacity: 0.8;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+    bottom: -1.25em;
+    animation: wave 18s linear reverse infinite;
+    opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+    bottom: -2.5em;
+    animation: wave 20s -1s reverse infinite;
+    opacity: 0.9;
+}
+
+@keyframes wave {
+    2% {
+        transform: translateX(1);
+    }
+
+    25% {
+        transform: translateX(-25%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    75% {
+        transform: translateX(-25%);
+    }
+
+    100% {
+        transform: translateX(1);
+    }
+}
 /* Caja redondeada */
 .rounded-box {
     background-color: #d3d3d3; /* Tono gris claro */
@@ -27,8 +91,11 @@ body {
     position: absolute;
     top: 10px;
     left: 10px;
+    transition: transform 400ms ease-in-out 300ms;
 }
-
+.volver:hover {
+    transform: translate(8px,3px) ;
+}
 /* Botones */
 .button {
     display: inline-block;
@@ -42,10 +109,12 @@ body {
     transition: background-color 0.3s ease;
     border: none;
     cursor: pointer;
+    transition: transform 400ms ease-in-out 300ms;
 }
 
 .button:hover {
     background-color:#0056b3;
+    transform: scale(1.3);
 }
 
 /* Título */
