--- a/templates/game.html
+++ b/templates/game.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="/static/css/style_Game.css"/>
 </head>
 <body>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
     <div class="volver">
         <button class="button " onclick="history.back();">VOLVER</button>
     </div>  
