--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="static/css/style.css" />
 </head>
 <body>
+    <body>
+        <div>
+           <div class="wave"></div>
+           <div class="wave"></div>
+           <div class="wave"></div>
+        </div>
     <form>
         <button class="login" type="submit" formaction="/login">Iniciar sesión</button>
     <div class="Centrado">   
@@ -28,6 +34,7 @@
     </div>
     </form>
     <a class="EnlaceInferior" href="/admin">Página de admin</a>
+    
 </body>
 
 </html>
