--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -5,21 +5,26 @@
     <link rel="stylesheet" href="..\static\css\styleInicioDeSesion.css" />
 </head>
 <body>
-    <div class="volver">        
-        <button class="button" onclick="history.back();">VOLVER</button>
-    </div> 
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
+        <div class="volver">        
+            <button class="button" onclick="history.back();">VOLVER</button>
+        </div> 
     <div class="rounded-box">
-        <h1>Registrarse</h1>
-        <form>
-            <label for="UserID">Nombre de usuario: </label>
-            <input id="UserID" name="Nombre de Usuario"/>
+        <h1 class="titulo">Registrarse</h1>
+        <form class="texto1">
+            <label for="UserID">Nombre de usuario:</label>
+            <input id="UserID" name="Nommbre de Usuario" placeholder="VictorGutiérrez123..."/>
             <br><br>
-            <label for="Password">Contraseña: </label>
+            <label for="Password">Contraseña:</label>
             <input type="Password" id="Password" name="Password" placeholder="Al menos 8 caracteres..."/>
             <br><br>
             <p>¿Ya tienes una cuenta?</p>
-            <a class="button" target="_self" href="/login">Iniciar sesión</a>
+            <a class="button" target="_self" href="/login">Iniciar Sesión</a>
         </form>
-    </div>
+    </div>    
 </body>
 </html>
