--- a/templates/game.html
+++ b/templates/game.html
@@ -3,29 +3,77 @@
 <head>
     <title>Mindle</title>
     {% load static %}
-    <link rel="stylesheet" href="..\static\css\style_Game.css"/>
+    <link rel="stylesheet" href="/static/css/style_Game.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
-
 <body>
-    <header>
-        <h1>¡Adivina el Diagnóstico del día</h1>
-        <p>Ingresa un diagnóstico.</p>
-    </header>
-    <main>
-        <div class="game-container">
-            <input type="text" id="userInput" placeholder="Escribe aquí tu respuesta..." maxlength="20">
-            <button id="submitGuess">Verificar</button>
-            <div id="feedback"></div>
-            <div class="attempts">
-                <h2>Intentos</h2>
-                <ul id="attemptList"></ul>
+    <div class="volver">
+        <form action="{% url 'index' %}" method="get">
+            <button type="submit">Volver al inicio</button>
+        </form>
+    </div>  
+    <div class="Centrado">
+        <header>
+            <h1></h1>
+            <p>Ingresa un trastorno mental .</p>
+        </header>
+        <main>
+            <div class="game-container">
+                
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <button type="submit">Comprobar</button>
+                </form>
+                
+                {% if resultado %}
+                <h2>Sintomas similares:</h2>
+                {% for sintoma in resultado %}
+                    <div id="sintomaloco"><p>{{ sintoma }}</p></div>
+                {% endfor %}
+                <!-- <p>{{ resultado }}</p> -->
+                {% else %}
+                <h2>womp womp nonina</h2>
+                
+                {% endif %}
+                <div class="attempts">
+                    <h2>Intentos: {{ intentos }}</h2>
+                    <ul id="attemptList"></ul>
+                </div>
+            </div>
+            
+        </main>
+        <footer>
+            <p>El diagnostico aleatorio es: {{ Trastorno }}</p>
+        </footer>
+    </div>
+    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="successModalLabel">¡Felicidades!
+                        ganaste en {{ intentos }} intentos
+                    </h5>
+                </div>
+                <div class="modal-body">
+                    Has acertado el trastorno. ¡Bien hecho!
+                </div>
+                <div class="modal-footer">
+                    <a href="../" class="btn btn-success">Continuar</a>
+                </div>
             </div>
         </div>
-    </main>
-    <footer>
-        <p>Desarrollado para fines educativos</p>
-    </footer>
-    <script src="script.js"></script>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    {% if mostrar_modal %}
+    <script>
+        // Solo mostrar la modal si `mostrar_modal` es True
+        const successModal = new bootstrap.Modal(document.getElementById('successModal'));
+        successModal.show();
+    </script>
+    {% endif %}
 </body>
 </html>
