--- a/templates/game.html
+++ b/templates/game.html
@@ -7,46 +7,53 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+    </div>
     <div class="volver">
         <form action="{% url 'index' %}" method="get">
-            <button type="submit">Volver al inicio</button>
+            <button class="button" type="submit">Volver</button>
         </form>
     </div>  
     <div class="Centrado">
-        <header>
-            <h1></h1>
-            <p>Ingresa un trastorno mental .</p>
-        </header>
-        <main>
-            <div class="game-container">
-                
-                <form method="POST">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit">Comprobar</button>
-                </form>
-                
-                {% if resultado %}
-                <h2>Sintomas similares:</h2>
-                {% for sintoma in resultado %}
-                    <div id="sintomaloco"><p>{{ sintoma }}</p></div>
-                {% endfor %}
-                <!-- <p>{{ resultado }}</p> -->
-                {% else %}
-                <h2>womp womp nonina</h2>
-                
-                {% endif %}
-                <div class="attempts">
-                    <h2>Intentos: {{ intentos }}</h2>
-                    <ul id="attemptList"></ul>
+        <div class="rounded-box">
+            <header>
+                <h1>Ingresa un trastorno mental</h1>
+            </header>
+            <main>
+                <div class="game-container">
+                    <br>
+                    <br>
+                    <form method="POST">
+                        {% csrf_token %}
+                        {{ form.as_p }}
+                        <button class="button" type="submit">Comprobar</button>
+                    </form>
+                    
+                    {% if resultado %}
+                    <h2>Sintomas similares:</h2>
+                    {% for sintoma in resultado %}
+                        <div id="sintomaloco"><p>{{ sintoma }}</p></div>
+                    {% endfor %}
+                    <!-- <p>{{ resultado }}</p> -->
+                    {% else %}
+                    <h2>womp womp nonina</h2>
+                    
+                    {% endif %}
+                    <div class="attempts">
+                        <h2>Intentos: {{ intentos }}</h2>
+                        <ul id="attemptList"></ul>
+                    </div>
                 </div>
-            </div>
-            
-        </main>
-        <footer>
-            <p>El diagnostico aleatorio es: {{ Trastorno }}</p>
-        </footer>
-    </div>
+                
+            </main>
+            <footer>
+                <p>El diagnostico aleatorio es: {{ Trastorno }}</p>
+            </footer>
+        </div>
+    </div>    
     <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
