--- a/static/css/styleRegistrarse.css
+++ b/static/css/styleRegistrarse.css
@@ -2,13 +2,73 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #f0f8ff;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: linear-gradient(315deg, rgb(164, 228, 255) 3%, rgb(102, 208, 254) 38%, rgb(50, 172, 253) 68%, rgb(1, 101, 159) 98%);
+    animation: gradient 15s ease infinite;
 }
 
+@keyframes gradient {
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+.wave {
+    background: rgb(255 255 255 / 25%);
+    border-radius: 1000% 1000% 0 0;
+    position: fixed;
+    width: 200%;
+    height: 12em;
+    animation: wave 10s -3s linear infinite;
+    transform: translate3d(0, 0, 0);
+    opacity: 0.8;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
+}
+
+.wave:nth-of-type(2) {
+    bottom: -1.25em;
+    animation: wave 18s linear reverse infinite;
+    opacity: 0.8;
+}
+
+.wave:nth-of-type(3) {
+    bottom: -2.5em;
+    animation: wave 20s -1s reverse infinite;
+    opacity: 0.9;
+}
+
+@keyframes wave {
+    2% {
+        transform: translateX(1);
+    }
+
+    25% {
+        transform: translateX(-25%);
+    }
+
+    50% {
+        transform: translateX(-50%);
+    }
+
+    75% {
+        transform: translateX(-25%);
+    }
+
+    100% {
+        transform: translateX(1);
+    }
+}
 /* Contenedor principal */
 form {
     background-color: #ffffff;
@@ -46,23 +106,34 @@ input {
 }
 
 /* Botón */
-button {
+.button {
+    display: inline-block;
+    padding: 10px 20px;
     background-color: #00bfff;
     color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+    text-decoration: none;
+    border-radius: 10px;
     font-size: 16px;
-    width: 100%;
-    margin-bottom: 10px;
+    text-align: center;
     transition: background-color 0.3s ease;
+    border: none;
+    cursor: pointer;
+    transition: transform 200ms ease-in-out 100ms;
 }
 
-button:hover {
-    background-color: #0056b3;
+.button:hover {
+    background-color:#0056b3;
+    transform: scale(1.2);
 }
 
+.Centrado {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centrado vertical */
+    align-items: center; /* Centrado horizontal */
+    /* Ocupa toda la altura */
+    transform: translateY(+0%); /* Mueve un poco hacia arriba */
+}
 /* Texto adicional */
 p {
     color: #555;
@@ -90,4 +161,14 @@ a:hover {
     form {
         width: 90%;
     }
+}
+.volver {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    transition: transform 200ms ease-in-out 100ms;
+}
+.volver:hover {
+    transform: translate(10px,4px) ;
+    transform-origin: scale(1.2);
 }
