--- a/templates/registrarse.html
+++ b/templates/registrarse.html
@@ -6,14 +6,24 @@
     <link rel="stylesheet" href="{% static 'css/styleRegistrarse.css' %}">
 </head>
 <body>
-    <h1>Registrarse</h1>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <!-- Si decides eliminar {{ form.as_p }}, añade aquí los campos manuales -->
-        <button type="submit">Registrarse</button>
-    </form>
-    <p>¿Ya tienes una cuenta?</p>
-    <a href="/login">Iniciar sesión</a>
+    <div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+        <div class="wave"></div>
+     </div>
+     <div class="volver">        
+        <button class="button" onclick="history.back();">VOLVER</button>
+    </div>
+    <div class="Centrado">
+        <h1>Registrarse</h1>
+        <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <!-- Si decides eliminar {{ form.as_p }}, añade aquí los campos manuales -->
+            <button class="button" type="submit">Registrarse</button>
+        </form>
+        <p>¿Ya tienes una cuenta?</p>
+        <a href="/login">Iniciar sesión</a>
+    </div>    
 </body>
 </html>
